name: husky
version: 0.0.1
license: MIT
cabal-version: >= 1.18
build-type: Simple

executable husky
    build-depends: base < 5, data-fix, recursion-schemes, pulse-simple, bytestring, vector, vector-fftw, vty, linear
    main-is: Husky.hs
    default-language: Haskell2010
    ghc-options: 
        --prof
        --fprof-auto
        -threaded
        --O2
        -O0
        -j4
